# Zypher-EdgeAI-Demo

./: .gitignore  CMakeLists.txt  CODEBASE_DOCUMENTATION.md  GETTING_STARTED.md  Kconfig  LICENSE  README.md  gesture_model.tflite  prj.conf  west.yml
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  DEBUGGING.md
docs/images/: README.md
model/: gesture_model.tflite  train_gesture_model.py
scripts/: latency_analyzer.py  setup.sh  show_demo.py  test_harness.py  uart_logger.py
src/: main.c
src/debug/: debug_monitor.c  debug_monitor.h  timing.c  timing.h
src/ml/: gesture_model.c  gesture_model.h  inference.cpp  inference.h  preprocessing.c  preprocessing.h
src/output/: ring_buffer.c  ring_buffer.h  uart_protocol.c  uart_protocol.h
src/sensor/: mock_accel.c  sensor_hal.c  sensor_hal.h
